# RatTG

./: .gitignore  README.md  VirusPython.py  config.py  exempel.env  main.py  pyproject.toml  type.py
VirusScr/: Cargo.toml
VirusScr/src/: main.rs
VirusScr/src/action/: json_response.rs  mod.rs  utils.rs
api/: __init__.py  bot.py  info.py  media.py  models.py
bot/: __init__.py  middleware.py
bot/handlers/: control.py  menu.py
bot/keyb/: control.py  menu.py
bot/utils/: text.py
core/: TasksMenager.py  loader.py
database/: .gitignore  models.py
utils/: get_info.py
