[package]
name = "VirusScr"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
reqwest = {version = "0.12.23", features = ["json", "multipart"]}
serde_json = "1.0.145"
serde = { version = "1.0.226", features = ["derive"] }
wmi = "0.17.2"
whoami="1.6.1"
sysinfo="0.37.0"
systemstat="0.2.5"
screenshots = "0.8.10"
